# file-uploader-example

./: Cargo.toml  index.html  readme.md  tailwind.config.js
src/: lib.rs  main.rs
src/components/: mod.rs
src/components/buttons/: button.rs  button_icon.rs  mod.rs
src/components/dropzone/: dropzone_bar.rs  dropzone_previewer.rs  mod.rs
src/components/file/: file_item.rs  file_list.rs  mod.rs
src/components/icons/: check_icon.rs  info_icon.rs  mod.rs  spin_icon.rs  trash_icon.rs
src/components/messages/: mod.rs  transfer_complete.rs  transfer_failed.rs
src/pages/: mod.rs  transfer_page.rs
src/services/: mod.rs  transferer.rs  types.rs
