[package]
name = "file-transfer-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.14", features = ["csr"] }
serde = { version = "1.0.210", features = ["derive"] }
reqwasm = "0.5.0"
web-sys = { version = "0.3.70", features = ["File"] }
human_bytes = "0.4.3"
leptos-use = "0.13.5"
